--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -10,13 +10,14 @@
     "postinstall": "typings install"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.1",
-    "@angular/compiler": "2.0.0-rc.1",
-    "@angular/core": "2.0.0-rc.1",
-    "@angular/http": "2.0.0-rc.1",
-    "@angular/platform-browser": "2.0.0-rc.1",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
-    "@angular/router": "2.0.0-rc.1",
+    "@angular/common": "2.0.0-rc.2",
+    "@angular/compiler": "2.0.0-rc.2",
+    "@angular/core": "2.0.0-rc.2",
+    "@angular/http": "2.0.0-rc.2",
+    "@angular/platform-browser": "2.0.0-rc.2",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.2",
+    "@angular/router": "2.0.0-rc.2",
+    "@angular/forms": "0.1.0",
     "core-js": "^2.2.1",
     "rxjs": "5.0.0-beta.7",
     "zone.js": "0.6.12",
@@ -24,7 +25,7 @@
     "jquery-ui": "1.10.5",
     "ckeditor": "4.5.8",
     "ng2-cookies": "0.1.5",
-    "angular2-notifications": "0.1.52"
+    "angular2-notifications": "0.1.57"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.2",
