--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -10,14 +10,14 @@
     "postinstall": "typings install"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/router": "3.0.0-beta.2",
-    "@angular/forms": "0.2.0",
+    "@angular/common": "2.0.0-rc.5",
+    "@angular/compiler": "2.0.0-rc.5",
+    "@angular/core": "2.0.0-rc.5",
+    "@angular/http": "2.0.0-rc.5",
+    "@angular/platform-browser": "2.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
+    "@angular/router": "3.0.0-rc.1",
+    "@angular/forms": "0.3.0",
     "core-js": "^2.2.1",
     "rxjs": "5.0.0-beta.7",
     "zone.js": "0.6.12",
@@ -25,7 +25,7 @@
     "jquery-ui": "1.10.5",
     "ckeditor": "4.5.8",
     "ng2-cookies": "0.1.5",
-    "angular2-notifications": "0.1.57",
+    "angular2-notifications": "0.3.0",
     "intl": "1.2.4"
   },
   "devDependencies": {
