--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.apache.geronimo.javamail</groupId>
+      <artifactId>geronimo-javamail_1.4_mail</artifactId>
+      <version>1.9.0-alpha-2</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>org.apache.tomee</groupId>
       <artifactId>javaee-api</artifactId>
       <version>7.0</version>
@@ -90,6 +96,18 @@
       <artifactId>selenium-support</artifactId>
       <version>${selenium.version}</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.icegreen</groupId>
+      <artifactId>greenmail</artifactId>
+      <version>1.4.0</version>
+      <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>com.sun.mail</groupId>
+          <artifactId>javax.mail</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 
@@ -157,6 +175,9 @@
             -Dwebdriver.chrome.driver=${chrome.driver}
           </argLine>
           <trimStackTrace>false</trimStackTrace>
+          <runOrder>alphabetical</runOrder>
+          <forkCount>1</forkCount>
+          <reuseForks>true</reuseForks>
         </configuration>
       </plugin>
       <plugin>
