--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -10,27 +10,28 @@
     "postinstall": "typings install"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.5",
-    "@angular/compiler": "2.0.0-rc.5",
-    "@angular/core": "2.0.0-rc.5",
-    "@angular/http": "2.0.0-rc.5",
-    "@angular/platform-browser": "2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
-    "@angular/router": "3.0.0-rc.1",
-    "@angular/forms": "0.3.0",
-    "core-js": "^2.2.1",
+    "@angular/common": "2.0.0-rc.6",
+    "@angular/compiler": "2.0.0-rc.6",
+    "@angular/core": "2.0.0-rc.6",
+    "@angular/http": "2.0.0-rc.6",
+    "@angular/forms": "2.0.0-rc.6",
+    "@angular/platform-browser": "2.0.0-rc.6",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
+    "@angular/router": "3.0.0-rc.2",
+    "@angular/compiler-cli": "0.6.0",
+    "core-js": "^2.4.1",
     "rxjs": "5.0.0-beta.7",
-    "zone.js": "0.6.12",
+    "zone.js": "^0.6.17",
     "jquery": "2.2.3",
     "jquery-ui": "1.10.5",
     "ckeditor": "4.5.8",
     "ng2-cookies": "0.1.5",
-    "angular2-notifications": "0.3.0",
+    "angular2-notifications": "0.3.3",
     "intl": "1.2.4"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.2",
-    "copy-webpack-plugin": "^1.1.1",
+    "copy-webpack-plugin": "^3.0.1",
     "compression-webpack-plugin": "^0.3.0",
     "pug-html-loader": "1.0.5",
     "css-loader": "^0.23.0",
@@ -44,7 +45,7 @@
     "ts-loader": "^0.8.1",
     "typescript": "^1.8.0",
     "typings": "^0.6.8",
-    "webpack": "^2.1.0-beta.4",
+    "webpack": "^2.1.0-beta.21",
     "pug": "^2.0.0-alpha3"
   }
 }
