--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -10,42 +10,41 @@
     "postinstall": "typings install"
   },
   "dependencies": {
-    "@angular/common": "2.0.0-rc.6",
-    "@angular/compiler": "2.0.0-rc.6",
-    "@angular/core": "2.0.0-rc.6",
-    "@angular/http": "2.0.0-rc.6",
-    "@angular/forms": "2.0.0-rc.6",
-    "@angular/platform-browser": "2.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
-    "@angular/router": "3.0.0-rc.2",
-    "@angular/compiler-cli": "0.6.0",
+    "@angular/common": "2.0.0",
+    "@angular/compiler": "2.0.0",
+    "@angular/core": "2.0.0",
+    "@angular/http": "2.0.0",
+    "@angular/forms": "2.0.0",
+    "@angular/platform-browser": "2.0.0",
+    "@angular/platform-browser-dynamic": "2.0.0",
+    "@angular/router": "3.0.0",
     "core-js": "^2.4.1",
-    "rxjs": "5.0.0-beta.7",
-    "zone.js": "^0.6.17",
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "^0.6.23",
     "jquery": "2.2.3",
     "jquery-ui": "1.10.5",
     "ckeditor": "4.5.8",
-    "ng2-cookies": "0.1.5",
-    "angular2-notifications": "0.3.3",
+    "ng2-cookies": "1.0.2",
+    "angular2-notifications": "0.3.7",
     "intl": "1.2.4"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.2",
     "copy-webpack-plugin": "^3.0.1",
     "compression-webpack-plugin": "^0.3.0",
-    "pug-html-loader": "1.0.5",
-    "css-loader": "^0.23.0",
+    "pug-html-loader": "1.0.8",
+    "css-loader": "0.25.0",
     "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.4",
-    "html-loader": "^0.4.0",
-    "html-webpack-plugin": "^2.8.1",
+    "file-loader": "0.9.0",
+    "html-loader": "0.4.4",
+    "html-webpack-plugin": "2.22.0",
     "raw-loader": "0.5.1",
-    "rimraf": "^2.5.1",
-    "style-loader": "^0.13.0",
-    "ts-loader": "^0.8.1",
-    "typescript": "^1.8.0",
-    "typings": "^0.6.8",
-    "webpack": "^2.1.0-beta.21",
-    "pug": "^2.0.0-alpha3"
+    "rimraf": "2.5.1",
+    "style-loader": "0.13.0",
+    "ts-loader": "0.8.1",
+    "typescript": "2.0.0",
+    "typings": "0.6.8",
+    "webpack": "2.1.0-beta.24",
+    "pug": "2.0.0-beta6"
   }
 }
