--- a/src/main/frontend/tsconfig.json
+++ b/src/main/frontend/tsconfig.json
@@ -1,17 +1,22 @@
 {
   "compilerOptions": {
-    "target": "ES5",
+    "target": "es5",
     "module": "commonjs",
+    "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
     "sourceMap": true,
-    "moduleResolution": "node"
+    "strictNullChecks": false,
+    "baseUrl": "./src"
   },
   "exclude": [
     "node_modules",
+    "dist",
     "typings/main",
     "typings/main.d.ts"
   ],
   "compileOnSave": false,
-  "buildOnSave": false
+  "buildOnSave": false,
+  "atom": { "rewriteTsconfig": false }
 }
