--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -10,14 +10,14 @@
     "postinstall": "typings install"
   },
   "dependencies": {
-    "@angular/common": "2.2.0-rc.0",
-    "@angular/compiler": "2.2.0-rc.0",
-    "@angular/core": "2.2.0-rc.0",
-    "@angular/http": "2.2.0-rc.0",
-    "@angular/forms": "2.2.0-rc.0",
-    "@angular/platform-browser": "2.2.0-rc.0",
-    "@angular/platform-browser-dynamic": "2.2.0-rc.0",
-    "@angular/router": "3.2.0-rc.0",
+    "@angular/common": "2.2.3",
+    "@angular/compiler": "2.2.3",
+    "@angular/core": "2.2.3",
+    "@angular/http": "2.2.3",
+    "@angular/forms": "2.2.3",
+    "@angular/platform-browser": "2.2.3",
+    "@angular/platform-browser-dynamic": "2.2.3",
+    "@angular/router": "3.2.3",
     "core-js": "^2.4.1",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "^0.6.25",
