--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -10,17 +10,17 @@
     "postinstall": "typings install"
   },
   "dependencies": {
-    "@angular/common": "2.3.0-rc.0",
-    "@angular/compiler": "2.3.0-rc.0",
-    "@angular/core": "2.3.0-rc.0",
-    "@angular/http": "2.3.0-rc.0",
-    "@angular/forms": "2.3.0-rc.0",
-    "@angular/platform-browser": "2.3.0-rc.0",
-    "@angular/platform-browser-dynamic": "2.3.0-rc.0",
-    "@angular/router": "3.3.0-rc.0",
+    "@angular/common": "2.4.1",
+    "@angular/compiler": "2.4.1",
+    "@angular/core": "2.4.1",
+    "@angular/http": "2.4.1",
+    "@angular/forms": "2.4.1",
+    "@angular/platform-browser": "2.4.1",
+    "@angular/platform-browser-dynamic": "2.4.1",
+    "@angular/router": "3.4.1",
     "core-js": "2.4.1",
-    "rxjs": "5.0.0-rc.4",
-    "zone.js": "0.7.2",
+    "rxjs": "5.0.2",
+    "zone.js": "0.7.4",
     "jquery": "2.2.3",
     "jquery-ui": "1.10.5",
     "ckeditor": "4.5.8",
@@ -44,7 +44,7 @@
     "ts-loader": "0.8.1",
     "typescript": "2.0.0",
     "typings": "0.6.8",
-    "webpack": "2.1.0-beta.25",
+    "webpack": "2.1.0-beta.28",
     "pug": "2.0.0-beta6"
   }
 }
