--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -6,30 +6,31 @@
     "clean": "rimraf node_modules doc dist && npm cache clean",
     "clean-install": "npm run clean && npm install",
     "watch": "webpack --watch --progress --profile",
-    "build": "rimraf dist && webpack --progress --profile",
-    "postinstall": "typings install"
+    "build": "rimraf dist && webpack --progress --profile"
   },
   "dependencies": {
-    "@angular/common": "2.4.1",
-    "@angular/compiler": "2.4.1",
-    "@angular/core": "2.4.1",
-    "@angular/http": "2.4.1",
-    "@angular/forms": "2.4.1",
-    "@angular/platform-browser": "2.4.1",
-    "@angular/platform-browser-dynamic": "2.4.1",
-    "@angular/router": "3.4.1",
+    "@angular/common": "4.0.0-rc.2",
+    "@angular/compiler": "4.0.0-rc.2",
+    "@angular/core": "4.0.0-rc.2",
+    "@angular/http": "4.0.0-rc.2",
+    "@angular/forms": "4.0.0-rc.2",
+    "@angular/platform-browser": "4.0.0-rc.2",
+    "@angular/platform-browser-dynamic": "4.0.0-rc.2",
+    "@angular/router": "4.0.0-rc.2",
     "core-js": "2.4.1",
     "rxjs": "5.0.2",
     "zone.js": "0.7.4",
     "jquery": "2.2.3",
     "jquery-ui": "1.10.5",
     "ckeditor": "4.5.8",
-    "ng2-cookies": "1.0.3",
-    "angular2-notifications": "0.3.7",
+    "ng2-cookies": "1.0.6",
+    "angular2-notifications": "0.4.53",
     "intl": "1.2.4"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.2",
+    "@types/node": "6.0.64",
+    "@types/core-js": "0.9.35",
+    "autoprefixer": "6.3.2",
     "copy-webpack-plugin": "^3.0.1",
     "compression-webpack-plugin": "^0.3.0",
     "pug-html-loader": "1.0.8",
@@ -41,10 +42,9 @@
     "raw-loader": "0.5.1",
     "rimraf": "2.5.1",
     "style-loader": "0.13.0",
-    "ts-loader": "0.8.1",
-    "typescript": "2.0.0",
-    "typings": "0.6.8",
+    "ts-loader": "2.0.1",
+    "typescript": "2.2.1",
     "webpack": "2.1.0-beta.28",
-    "pug": "2.0.0-beta6"
+    "pug": "2.0.0-beta11"
   }
 }
