--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -9,14 +9,15 @@
     "build": "rimraf dist && webpack --progress --profile"
   },
   "dependencies": {
-    "@angular/common": "4.0.0-rc.2",
-    "@angular/compiler": "4.0.0-rc.2",
-    "@angular/core": "4.0.0-rc.2",
-    "@angular/http": "4.0.0-rc.2",
-    "@angular/forms": "4.0.0-rc.2",
-    "@angular/platform-browser": "4.0.0-rc.2",
-    "@angular/platform-browser-dynamic": "4.0.0-rc.2",
-    "@angular/router": "4.0.0-rc.2",
+    "@angular/common": "4.0.0",
+    "@angular/compiler": "4.0.0",
+    "@angular/core": "4.0.0",
+    "@angular/http": "4.0.0",
+    "@angular/forms": "4.0.0",
+    "@angular/platform-browser": "4.0.0",
+    "@angular/platform-browser-dynamic": "4.0.0",
+    "@angular/router": "4.0.0",
+    "@angular/animations": "4.0.0",
     "core-js": "2.4.1",
     "rxjs": "5.0.2",
     "zone.js": "0.7.4",
