--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -9,23 +9,23 @@
     "build": "rimraf dist && webpack --progress --profile"
   },
   "dependencies": {
-    "@angular/common": "4.0.3",
-    "@angular/compiler": "4.0.3",
-    "@angular/core": "4.0.3",
-    "@angular/http": "4.0.3",
-    "@angular/forms": "4.0.3",
-    "@angular/platform-browser": "4.0.3",
-    "@angular/platform-browser-dynamic": "4.0.3",
-    "@angular/router": "4.0.3",
-    "@angular/animations": "4.0.3",
+    "@angular/common": "4.1.0",
+    "@angular/compiler": "4.1.0",
+    "@angular/core": "4.1.0",
+    "@angular/http": "4.1.0",
+    "@angular/forms": "4.1.0",
+    "@angular/platform-browser": "4.1.0",
+    "@angular/platform-browser-dynamic": "4.1.0",
+    "@angular/router": "4.1.0",
+    "@angular/animations": "4.1.0",
     "core-js": "2.4.1",
     "rxjs": "5.0.2",
-    "zone.js": "0.7.4",
+    "zone.js": "0.8.4",
     "jquery": "2.2.3",
     "jquery-ui": "1.10.5",
     "ckeditor": "4.5.8",
-    "ng2-cookies": "1.0.11",
-    "angular2-notifications": "0.5.7",
+    "ng2-cookies": "1.0.12",
+    "angular2-notifications": "0.7.2",
     "intl": "1.2.4"
   },
   "devDependencies": {
@@ -43,9 +43,9 @@
     "raw-loader": "0.5.1",
     "rimraf": "2.5.1",
     "style-loader": "0.13.0",
-    "ts-loader": "2.0.1",
-    "typescript": "2.2.1",
+    "ts-loader": "2.0.3",
+    "typescript": "2.3.0",
     "webpack": "2.1.0-beta.28",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta.12"
   }
 }
