--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -10,43 +10,48 @@
     "build": "rimraf dist && webpack --progress --profile"
   },
   "dependencies": {
-    "@angular/common": "4.1.0",
-    "@angular/compiler": "4.1.0",
-    "@angular/core": "4.1.0",
-    "@angular/http": "4.1.0",
-    "@angular/forms": "4.1.0",
-    "@angular/platform-browser": "4.1.0",
-    "@angular/platform-browser-dynamic": "4.1.0",
-    "@angular/router": "4.1.0",
-    "@angular/animations": "4.1.0",
-    "core-js": "2.4.1",
-    "rxjs": "5.0.2",
-    "zone.js": "0.8.4",
+    "@angular/animations": "7.2.13",
+    "@angular/common": "7.2.13",
+    "@angular/compiler": "7.2.13",
+    "@angular/core": "7.2.13",
+    "@angular/forms": "7.2.13",
+    "@angular/http": "7.2.13",
+    "@angular/platform-browser": "7.2.13",
+    "@angular/platform-browser-dynamic": "7.2.13",
+    "@angular/router": "7.2.13",
+    "angular2-notifications": "2.0.0",
+    "ckeditor": "4.5.8",
+    "core-js": "2.6.5",
+    "intl": "1.2.4",
     "jquery": "2.2.4",
     "jquery-ui-bundle": "1.12.1-migrate",
-    "ckeditor": "4.5.8",
     "ng2-cookies": "1.0.12",
-    "angular2-notifications": "0.7.2",
-    "intl": "1.2.4"
+    "rxjs": "6.4.0",
+    "rxjs-compat": "6.4.0",
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
-    "@types/node": "6.0.64",
     "@types/core-js": "0.9.35",
-    "autoprefixer": "6.3.2",
-    "copy-webpack-plugin": "^3.0.1",
-    "compression-webpack-plugin": "^0.3.0",
-    "pug-html-loader": "1.0.8",
-    "css-loader": "0.25.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "0.9.0",
-    "html-loader": "0.4.4",
-    "html-webpack-plugin": "2.22.0",
+    "@types/node": "6.0.64",
+    "autoprefixer": "9.5.1",
+    "copy-webpack-plugin": "5.0.2",
+    "css-loader": "2.1.1",
+    "extract-text-webpack-plugin": "3.0.2",
+    "file-loader": "3.0.1",
+    "html-loader": "0.5.5",
+    "html-webpack-plugin": "3.2.0",
+    "pug": "2.0.3",
+    "pug-loader": "^2.4.0",
     "raw-loader": "0.5.1",
     "rimraf": "2.5.1",
-    "style-loader": "0.13.0",
-    "ts-loader": "2.0.3",
-    "typescript": "2.3.0",
-    "webpack": "2.2.1",
-    "pug": "2.0.0-beta.12"
+    "style-loader": "0.23.1",
+    "ts-loader": "5.3.3",
+    "typescript": "3.4.3",
+    "webpack": "4.30.0",
+    "webpack-cli": "3.3.0",
+    "babel-core": "~6.26",
+    "babel-loader": "~7.1",
+    "babel-preset-env": "~1.7",
+    "babel-preset-es2015": "~6.24"
   }
 }
