--- a/src/main/frontend/tsconfig.json
+++ b/src/main/frontend/tsconfig.json
@@ -6,17 +6,12 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
+    "suppressImplicitAnyIndexErrors": true,
     "sourceMap": true,
     "strictNullChecks": false,
     "baseUrl": "./src",
-    "types": ["node"],
-    "lib": [
-      "es5",
-      "es2015.iterable",
-      "es2015.collection",
-      "es2015.promise",
-      "dom"
-    ]
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["es6", "dom"]
   },
   "exclude": [
     "node_modules",
@@ -25,5 +20,7 @@
   ],
   "compileOnSave": false,
   "buildOnSave": false,
-  "atom": { "rewriteTsconfig": false }
+  "atom": {
+    "rewriteTsconfig": false,
+  }
 }
